added date query

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 OPEN_WEATHER_URL=http://api.openweathermap.org/data/2.5/weather
 OPEN_WEATHER_API_KEY=bf89e941da14d9a5e0a60764ed99bf4a
+DB_URL=mongodb://127.0.0.1:27017/theweather
+API_VERSION=v1
+REFRESH_INTERVAL=1
+REFRESH_UNIT=hours
