--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.11"
   }
 }
