--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample Weather API",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"See README for notes on POSTMAN TESTS\" && exit 1"
   },
   "author": "",
   "license": "ISC",
