--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample Weather API",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"See README for notes on POSTMAN TESTS\" && exit 1",
+    "test": "jest --watchAll",
     "api": "node ./server.js"
   },
   "author": "",
@@ -16,5 +16,9 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mongoose": "^5.4.11"
+  },
+  "devDependencies": {
+    "jest": "^24.1.0",
+    "prettier": "^1.16.4"
   }
 }
