--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "jest --watchAll",
-    "api": "node ./server.js"
+    "api": "node ./server.js",
+    "api-debug": "nodemon --inspect ./server.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "jest": "^24.1.0",
+    "nodemon": "^1.18.10",
     "prettier": "^1.16.4"
   }
 }
