--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,9 @@
     "node": true,
     "jest": true
   },
-
+  "plugins": ["prettier"],
   "rules": {
+    "prettier/prettier": "error",
     "accessor-pairs": 2,
     "arrow-spacing": [2, { "before": true, "after": true }],
     "block-spacing": [2, "always"],
