--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "lint": "eslint .",
     "test": "jest",
-    "prepush": "npm run lint && npm test",
     "test:watch": "jest --watchAll",
+    "prepush": "npm run lint && npm test",
     "api": "node ./server.js",
     "api-debug": "nodemon --inspect ./server.js"
   },
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "eslint": "^5.14.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "nodemon": "^1.18.10",
