--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
   "jest": {
     "testEnvironment": "node"
   },
-  "husky.hooks ": {
-    "prepush": "npm run lint && npm test"
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm test",
+      "pre-push": "npm run lint && npm test"
+    }
   }
 }
